@@ -4,6 +4,7 @@ CHANGES.txt - 2011-08-11
 CHANGES IN CUPS V1.5.1
 
 	- Documentation updates (STR #3885)
+	- Several programs did not support the cupsFilter2 keyword in PPD files.
 	- The IPP backend incorrectly reported spool-area-full states.
 	- cupsMarkOptions() did not protect against a bad PPD that was missing
 	  one or more standard Duplex options.
